--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.6",
+    "motion": "^12.7.4",
     "next": "14.2.22",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
